cookiecluster/src/snapshots/karpenter-odcr/cookiecluster__cli__tests__helm.snap
---
source: cookiecluster/src/cli.rs
expression: rendered
---
################################################################################
# Karpenter Controller & Node IAM roles, SQS Queue, and Eventbridge Rules
################################################################################

module "karpenter" {
  source  = "terraform-aws-modules/eks/aws//modules/karpenter"
  version = "~> 21.24"

  cluster_name = module.eks.cluster_name

  # Name needs to match role name passed to the EC2NodeClass
  node_iam_role_use_name_prefix   = false
  node_iam_role_name              = "example-karpenter-node"

  # Avoid policy size limit error
  enable_inline_policy = true

  tags = module.tags.tags
}

################################################################################
# Karpenter Helm chart
################################################################################

resource "helm_release" "karpenter" {
  name       = "karpenter"
  namespace  = "kube-system"
  repository = "oci://public.ecr.aws/karpenter"
  chart      = "karpenter"
  # Update to the latest compatible version: https://github.com/aws/karpenter-provider-aws/releases
  version    = "1.14.0"
  wait       = false

  values = [
    <<-EOT
      dnsPolicy: Default
      serviceAccount:
        name: ${module.karpenter.service_account}
      settings:
        clusterName: ${module.eks.cluster_name}
        clusterEndpoint: ${module.eks.cluster_endpoint}
        interruptionQueue: ${module.karpenter.queue_name}
    EOT
  ]
}

################################################################################
# Helm charts
################################################################################

resource "helm_release" "nvidia_device_plugin" {
  name             = "nvidia-device-plugin"
  repository       = "https://nvidia.github.io/k8s-device-plugin"
  chart            = "nvidia-device-plugin"
  # Update to the latest compatible version: https://github.com/NVIDIA/k8s-device-plugin/releases
  version          = "0.19.3"
  namespace        = "nvidia-device-plugin"
  create_namespace = true
  wait             = false
}
